test/valid-data/multiple-roots2/schema/MyAsset.ts
import { Asset } from "../Asset";

export type MyAsset = Asset;
